Remove unused CertificationTypeNotSupportedException
The CertificationTypeNotSupportedException in the RequestFactory.java file, and a method call transform from Collectors class in SendAndReceiveChunkedMessagesTest.java are removed. These changes contribute to a more readable and maintainable codebase by reducing unnecessary complexity and avoiding potential issues that might arise from unutilized classes or methods.